--- a/demoapp/html/welcome.html
+++ b/demoapp/html/welcome.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
   <title>Welcome Page</title>
   <link href="demo.css" media="all" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-<div id='container'>
-  <h1>Welcome Page</h1>
-  <p>Login succeeded. Now you can <a href=".">logout</a>.</p>
-</div>
+  <div id='container'>
+    <h1>Welcome Page</h1>
+    <p>Login succeeded. Now you can <a href=".">logout</a>.</p>
+    <a href="./test.html"> To Test Page</a>
+    <p> <a href="./contact.html"> To Cantact Page</a> </p>
+  </div>
+  <div id=''>
+
+  </div>
 </body>
 </html>
