--- a/demoapp/html/welcome.html
+++ b/demoapp/html/welcome.html
@@ -15,10 +15,7 @@
     <h1>Welcome Page</h1>
     <p>Login succeeded. Now you can <a href=".">logout</a>.</p>
     <a href="./test.html"> To Test Page</a>
-    <p> <a href="./contact.html"> To Cantact Page</a> </p>
-  </div>
-  <div id=''>
-
+    <p> <a href="./contact.html"> To Contact Page</a> </p>
   </div>
 </body>
 </html>
