--- a/demoapp/html/error.html
+++ b/demoapp/html/error.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Error Page</title>
-  <link href="demo.css" media="all" rel="stylesheet" type="text/css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Error Page</title>
+    <link href="demo.css" media="all" rel="stylesheet" type="text/css">
 </head>
+
 <body>
   <div id="container">
     <h1>Error Page</h1>
