--- a/demoapp/html/contact.html
+++ b/demoapp/html/contact.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="container">
-        <h1>Contact Info</h1>
+        <h1>Contact Info</h1> <a href="./welcome.html">Back</a>
         <p><h2>Address</h2></p>
         <p> 111 bangwa, bangyai, bangkok 12110</p>
         <img class="image" src="./images/cat-address.jpg">
@@ -26,7 +26,7 @@
         <h2>Email</h2>
         <p> test123@mail.com</p>
         <img class="image" src="./images/cat-email.jpg">
-        <p> <a href="./welcome.html">Back</a> </p>
+        
     </div>
 
 </body>
