--- a/demoapp/html/test.html
+++ b/demoapp/html/test.html
@@ -10,6 +10,16 @@
 </head>
 
 <body>
+    <header>
+        <img class="logo" src="./images/logo.png" alt="logo">
+        <nav>
+            <ul class="nav_links">
+                <li><a href="./welcome.html">Home</a></li>
+                <li><a href="./test.html">Test</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="container">
         <h1> Test Page </h1>
         <a href="./welcome.html">Back</a>
