--- a/demoapp/html/welcome.html
+++ b/demoapp/html/welcome.html
@@ -11,11 +11,22 @@
 </head>
 
 <body>
-  <div id='container'>
-    <h1>Welcome Page</h1>
-    <p>Login succeeded. Now you can <a href=".">logout</a>.</p>
-    <a href="./test.html"> To Test Page</a>
-    <p> <a href="./contact.html"> To Contact Page</a> </p>
-  </div>
+  <header>
+    <img class="logo" src="./images/logo.png" alt="logo">
+    <nav>
+      <ul class="nav_links">
+        <li><a href="./welcome.html">Home</a></li>
+        <li><a href="./test.html">Test</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </nav>
+</header>
+    <div id='container'>
+      <h1>Welcome Page</h1>
+      <p>Login succeeded. Now you can <a href=".">logout</a>.</p>
+      <!-- <a href="./test.html"> To Test Page</a>
+      <p> <a href="./contact.html"> To Contact Page</a> </p> -->
+    </div>
+  
 </body>
 </html>
