modified and mew pic

--- a/demoapp/html/welcome.html
+++ b/demoapp/html/welcome.html
@@ -23,7 +23,8 @@
 </header>
     <div id='container'>
       <h1>Welcome Page</h1>
-      <p>Login succeeded. Now you can <a href=".">logout</a>.</p>
+      <p>Login succeeded. Now you can </p>
+      <a href="." class="btn" type="button">logout</a>
       <!-- <a href="./test.html"> To Test Page</a>
       <p> <a href="./contact.html"> To Contact Page</a> </p> -->
     </div>
